--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,11 @@
     <string name="title_activity_mic">MicActivity</string>
     <string name="title_activity_about">AboutActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="mic_connected">Connected</string>
+    <string name="mic_disconnect">Disconnect</string>
+    <string name="mic_verify_disconnect">Are you 100% sure you want to disconnect?</string>
+    <string name="mic_verify_yes">Yes</string>
+    <string name="mic_verify_no">No</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
