--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
 
     <!-- Strings for QR code pairing activity -->
     <string name="qr_code_not_an_ip_address">A QR code was detected, but is not a MicPhone QR code.</string>
-    <string name="title_activity_speaker">SpeakerActivity</string>
+
+    <!-- Strings for Speaker activity -->
+    <string name="title_activity_speaker">Speaker Running</string>
+    <string name="start_speaker">Start Speaker</string>
 
 </resources>
