--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="pair">Pair</string>
 
+    <!-- Strings for SpeakerActivity -->
+    <string name="speaker_starting_speaker">Starting Speaker…</string>
+
     <!-- Strings for MicActivity -->
     <string name="mic_connected">Connected</string>
     <string name="mic_disconnect">Disconnect</string>
@@ -36,5 +39,6 @@
     <!-- Strings for Speaker activity -->
     <string name="title_activity_speaker">Speaker Running</string>
     <string name="start_speaker">Start Speaker</string>
+    <string name="speaker_ip_address">Speaker IP address:</string>
 
 </resources>
