--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_mic">MicActivity</string>
-    <string name="title_activity_about">AboutActivity</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_about">About</string>
+    <string name="title_activity_settings">Settings</string>
 
     <string name="speaker">Join a speaker</string>
 
