--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,9 @@
     <string name="title_activity_mic">MicActivity</string>
     <string name="title_activity_about">About</string>
     <string name="title_activity_settings">Settings</string>
-
     <string name="speaker">Join a speaker</string>
-
     <string name="pair">Pair</string>
+    <string name="cancel">Cancel</string>
 
     <!-- Strings for SpeakerActivity -->
     <string name="speaker_starting_speaker">Starting Speaker…</string>
@@ -45,6 +44,9 @@
     <string name="start_speaker">Start Speaker</string>
     <string name="speaker_ip_address">Speaker IP address:</string>
     <string name="speaker_nfc_not_available">NFC is not available. To pair using NFC, first enable NFC.</string>
+    <string name="speaker_network_unavailable">Network Unavailable</string>
+    <string name="speaker_connect_to_wifi">Connect to a WiFi network to use this application.</string>
+    <string name="speaker_settings">Settings…</string>
 
 
 </resources>
