--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="speaker">Join a speaker</string>
     <string name="pair">Pair</string>
     <string name="cancel">Cancel</string>
+    <string name="divider">Divider</string>
 
     <!-- Strings for SpeakerActivity -->
     <string name="speaker_starting_speaker">Starting Speaker…</string>
@@ -44,7 +45,7 @@
     <!-- Strings for Speaker activity -->
     <string name="title_activity_speaker">Speaker Running</string>
     <string name="start_speaker">Start Speaker</string>
-    <string name="speaker_ip_address">Speaker IP address:</string>
+    <string name="speaker_ip_address">Speaker IP Address</string>
     <string name="speaker_nfc_not_available">NFC is not available. To pair using NFC, first enable NFC.</string>
     <string name="speaker_network_unavailable">Network Unavailable</string>
     <string name="speaker_connect_to_wifi">Connect to a WiFi network to use this application.</string>
@@ -54,5 +55,7 @@
     <string name="pairing_choice_qr_code_description">To pair using QR code, simply tap the button below and point the camera viewfinder at the QR code displayed by the speaker.</string>
     <string name="pairing_choice_manual_description">To pair manually, enter the IP address displayed by the speaker below.</string>
     <string name="manual_pairing_ip_address_hint">192.168.43.1</string>
+    <string name="settings_nothing_to_set_here">Nothing to set here :P</string>
+    <string name="speaker_disconnect">To disconnect, simply press the back button.</string>
 
 </resources>
